<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tanggal_kirim" />

            <EditText
                android:id="@+id/etSendDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_tanggal_kirim"
                android:inputType="date"
                android:autofillHints="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_jumlah_truck" />

            <EditText
                android:id="@+id/etQtyTruck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_jumlah_truck"
                android:inputType="number"
                android:autofillHints="postalAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_qty_to" />

            <EditText
                android:id="@+id/etQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="0"
                android:enabled="false"
                android:inputType="number"
                android:autofillHints="postalAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_catatan" />

            <EditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_catatan"
                android:inputType="text"
                android:autofillHints="postalAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:background="@drawable/round_outlined_button"
                android:text="Cancel"
                android:textColor="#616161"
                android:layout_marginEnd="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:background="@drawable/round_green_button"
                android:text="@string/button_simpan"
                android:textColor="@android:color/white"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>