<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bgr_login_daftar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tv_jenis_app_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN TRANSPORTASI"/>
        <View
            android:background="@color/bpRed"
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:textSize="@dimen/text2"
            android:textColor="@color/white"
            android:id="@+id/tv_fordev"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="For Development"/>
        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="#fff"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:theme="@style/EtWhite"
                android:gravity="center_horizontal"
                android:id="@+id/et_username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                style="@style/TextContentWhite"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="#fff"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:theme="@style/EtWhite"
                android:gravity="center_horizontal"
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sandi"
                android:inputType="textPassword"
                style="@style/TextContentWhite"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:id="@+id/rl_whole"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp">
            <Button
                android:textSize="18sp"
                android:textColor="#fff"
                android:id="@+id/btn_login"
                android:background="@drawable/btn_save_alternate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masuk_big"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        style="@style/TextTitleWhiteRegular"/>
</LinearLayout>
